--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,7 +109,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["src/__tests__/"],
+  "include": ["src/**/*.ts", "!src/__tests__/**/*.ts"],
   "ts-node": {
     "esm": true
   }
