--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run remove-tests-folder",
+    "remove-tests-folder": "rm -rf dist/__tests__",
     "build:watch": "tsc --build tsconfig.json --watch",
     "test": "jest --coverage",
     "start": "npx ts-node src/index.ts"
