fixed bug jest types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "esModuleInterop": true,
     "noEmitOnError": false,
-    "removeComments": true
+    "removeComments": true,
+    "types": ["jest"]
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist", ".src/__tests__"]
